--- a/src/template/css/mycss.css
+++ b/src/template/css/mycss.css
@@ -175,7 +175,7 @@ label {
     position: absolute;
     top: 0px;
     right: 0px;
-    width: 10%;
+    width: 10em;
     background-color: #bc2b2b;
     border: none;
     color: white;
