--- a/src/template/css/mycss.css
+++ b/src/template/css/mycss.css
@@ -111,6 +111,7 @@ label {
 }
 
 #wrap-game {
+    /*cursor: url(../images/aim.png) !important;*/
     display: none;
     /*display: table;*/
     height: 100%;
@@ -194,6 +195,28 @@ label {
     width: 12%;
     background-color: #ff3535;
     cursor: pointer;
+}
+
+#respawn {
+    opacity: 0.6;
+    display: none;
+    position: fixed;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%,-50%);
+    width: 10em;
+    height: 5em;
+    background: url(../images/button-oncancel.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    text-align: center;
+    transition: 0.2s;
+    z-index: 10;
+}
+
+#respawn:hover {
+    cursor: pointer;
+    filter: brightness(70%);
 }
 
 #playercount {
