--- a/src/template/index.html
+++ b/src/template/index.html
@@ -24,7 +24,9 @@
 
 <body>
     <!-- div with id "wrap-game" is prerequisites -->
-    <div id="wrap-game"></div>
+    <div id="wrap-game">
+        <div id="chat"></div>
+    </div>
     <!-- MENU -->
     <div id="menu">
         <img id="page" class="first" title="KB2A TEAM" src="./images/page.png">
