--- a/src/template/index.html
+++ b/src/template/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- div with id "wrap-game" is prerequisites -->
     <div id="wrap-game">
-        <div id="chat"></div>
+        <div id="chat" style="display: none"></div>
     </div>
     <!-- MENU -->
     <div id="menu">
